# symbio-ai

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
app/: main.py  router.py
backend/: pyproject.toml
backend/app/: agent_runtime.py  envelope_codec.py  main.py  models.py  orchestrator.py  settings.py  storage.py  supervisor_runtime.py
backend/app/agents/: __init__.py  agronomy_knowledge.py  base.py  field_intake.py  neuro_symbolic_auditor.py  operations_report.py  rule_compliance.py  supervisor.py  vision_analysis.py
backend/app/data/: agronomy_kb.json  compliance_rules.json  demo_cases.json
backend/app/scripts/: band_dump_participants.py  run_all_workers.py  run_demo.py  run_supervisor_watchdog.py
backend/app/services/: ai_ml_api.py  band.py  featherless.py  knowledge.py  phoenix.py  rules.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
