[project]
name = "symbio-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Symbio.AI Biosecurity Command"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "websockets>=12.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0"
]

[project.optional-dependencies]
langgraph = [
  "langgraph>=0.2.74"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"